# jong_talk

./: .gitattributes  Cargo.toml  build.rs  config.toml
assets/fonts/: OFL.txt
server_lib/: Cargo.toml
server_lib/src/: lib.rs
src/: info.rs  main.rs  main_home.rs  scroll.rs  setting.rs
src/talks/: host.rs  join.rs  mod.rs  modal.rs  rps_game.rs  talk.rs  talk_struct.rs  talk_update_data.rs
