[package]
name = "jong_talk"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3



[dependencies]
bevy = { version = "0.17.2", features = ["dynamic_linking"] }
server_lib = {path = "server_lib"}
tokio = { version = "1.46.1", features = ["full"] }
bevy_bc_ime_text_field = {path = "../bevy_bc_ime_text_field"}
local-ip-address = "0.6.5"
toml = "0.9.2"
rand = "0.9.2"
system_shutdown = "4.1.0"
