[package]
name = "jong_talk"
version = "1.0.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
[target.x86_64-pc-windows-msvc]
rustflags = ["-Ctarget-feature=+crt-static"]

[target.'cfg(windows)']
rustflags = ["-C", "link-args=/SUBSYSTEM:WINDOWS"]
[dependencies]
bevy = { version = "0.18.0"}
server_lib = {path = "server_lib"}
tokio = { version = "1.46.1", features = ["full"] }
bevy_bc_ime_text_field = "0.1.0"
local-ip-address = "0.6.5"
toml = "0.9.2"
rand = "0.9.2"
system_shutdown = "4.1.0"
cargo_toml = "0.22.3"
open = "5.3.3"
image = "0.25.6"
winit = "0.30"

[build-dependencies]
winres = "0.1"